--- a/picture-flow-ui/package.json
+++ b/picture-flow-ui/package.json
@@ -19,11 +19,11 @@
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "9.1.0",
     "react-router-dom": "^6.17.0",
     "redux": "^5.0.1",
     "sort-by": "^0.0.2",
