--- a/picture-flow-service/vercel.json
+++ b/picture-flow-service/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": "3",
+    "version": 3,
     "builds":[{"src": "./api.py", "use": "@vercel/other"}],
     "routes": [{"src": "/(.*)", "dest": "/"}]
 }
