--- a/picture-flow-service/vercel.json
+++ b/picture-flow-service/vercel.json
@@ -1,5 +1,24 @@
 {
     "version": 2,
-    "builds":[{"src": "./api.py", "use": "@vercel/other"}],
-    "routes": [{"src": "/(.*)", "dest": "/"}]
-}
+    "builds": [
+      {
+        "src": "picture-flow-service/api.py",
+        "use": "@vercel/python"
+      },
+      {
+        "src": "picture-flow-ui/package.json",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "picture-flow-service/api.py"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "picture-flow-ui/public/index.html"
+      }
+    ]
+  }
+  
