--- a/picture-flow-ui/package.json
+++ b/picture-flow-ui/package.json
@@ -44,6 +44,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "sas": "^3.0.4",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "proxy": "https://picture-flow-u66i.onrender.com"
+
   }
 }
+
